<resources>
    <string name="app_name">Take the Covid-19 Quiz</string>
    <string name="covid_quiz">Covid-19 Quiz</string>
    <string name="question1">What item was made famous by panic buying when COVID-19 first hit headlines?</string>
    <string name="fly_spray">Fly Spray</string>
    <string name="toilet_paper">Toilet Paper</string>
    <string name="socks">Socks</string>
    <string name="question2">What country did COVID-19 originate from?</string>
    <string name="country">Country</string>
    <string name="question3"><![CDATA[Which statements are NOT true? (check all that apply)]]></string>
    <string name="q3option1">COVID-19 can only affect the Elderly and is not dangerous to others.</string>
    <string name="q2option2">By practicing Social Distancing we can help stop the spread of COVID-19.</string>
    <string name="q3option3">Drinking alcohol daily can greatly reduce your chances of infection for COVID-19.</string>
    <string name="q3option4">You can reduce the chance of infection by washing your hands for at least 20 seconds with soapy water.</string>
    <string name="question4">Which of the following images, best depicts images associated with COVID-19</string>
    <string name="question5"><![CDATA[Which of the following symptoms could indicate you have COVID-19? (check all that apply)]]></string>
    <string name="q5option1">You have a dry cough</string>
    <string name="q5option2">You like the colour purple.</string>
    <string name="q5option3">You believe the earth is flat</string>
    <string name="q5option4">You have fever like symptoms</string>
    <string name="q5option5">You have a sense of humor</string>
    <string name="question6">What is the recommended distance you should observe when practicing social distancing?</string>
    <string name="q6option1">Try to keep 1 mile between you and any international arrivals.</string>
    <string name="q6option2">You can avoid social distancing just by wearing a mask.</string>
    <string name="q6option3">Keep at minimum 1.5 meters between yourself and other members of the public.</string>
    <string name="q6option4">Social distancing is only an excuse not to visit relatives.</string>
    <string name="question7">What is this sign telling you to wear?</string>
    <string name="image_mask">Image Wear Face Mask</string>
    <string name="image_robo">Image of Robo Virus</string>
    <string name="image_corona">Image of Corona Virus</string>
    <string name="image_blob">Image of Blob Virus</string>
    <string name="glasses">Glasses</string>
    <string name="helmet">Helmet</string>
    <string name="lipstick">Lipstick</string>
    <string name="mask">Mask</string>
    <string name="feeling_lucky">Feeling lucky? Hit the button below to see how you went.</string>
    <string name="submit_answers">Submit Answers</string>
    <string name="image_credits"><![CDATA[Images courtesy Cartoon Dealer, HiClipart & Clker]]></string>
    <string name="question10">What type of beverage is CORONA famously known for?</string>
    <string name="animal">Animal</string>
    <string name="question8">What animal is believed to have been the original source of COVID-19 to humans?</string>
    <string name="coffee">Coffee</string>
    <string name="flavoured_milk">Flavoured Milk</string>
    <string name="beer">Beer</string>
    <string name="lockdown">Lockdown</string>
    <string name="touchdown">Touchdown</string>
    <string name="duckdown">Duckdown</string>
    <string name="beatdown">Beatdown</string>
    <string name="subheading">10 Questions to test your knowledge</string>
    <string name="question9">What is the common term applied where a community is restricted movement and confined to home</string>
    <string name="juice">Juice</string>
</resources>